--- a/server/DockerFile
+++ b/server/DockerFile
@@ -1,26 +1,21 @@
-# Шаг 1: Берем легкий образ Node.js
-FROM node:20-alpine
-
-# --- ИСПРАВЛЕНИЕ: Устанавливаем OpenSSL для Prisma ---
+# Этап 1: Сборка
+FROM node:20-alpine AS builder
 RUN apk add --no-cache openssl
-
-# Шаг 2: Указываем рабочую папку внутри контейнера
 WORKDIR /app
-
-# Шаг 3: Копируем файлы зависимостей
 COPY package*.json ./
-
-# Шаг 4: Устанавливаем зависимости
 RUN npm install
-
-# Шаг 5: Копируем весь остальной код проекта
 COPY . .
-
-# Шаг 6: Генерируем Prisma Client
 RUN npx prisma generate
+RUN npm run build
 
-# Шаг 7: Открываем порт
+# Этап 2: Запуск
+FROM node:20-alpine
+RUN apk add --no-cache openssl
+WORKDIR /app
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/prisma ./prisma
+
 EXPOSE 4000
-
-# Шаг 8: Запускаем
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
