esLint config false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
       
       - name: Lint
         run: cd server && npm run lint
-      
+        env:
+          ESLINT_USE_FLAT_CONFIG: false
       - name: Type Check
         run: cd server && npm run type-check
 
