--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src/**/*.ts",
     "type-check": "tsc --noEmit"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,7 +22,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "typescript-eslint": "^8.55.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
