--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
-    "node-cron": "^4.2.1",
-    "typescript-eslint": "^8.55.0"
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
@@ -35,9 +35,12 @@
     "@typescript-eslint/eslint-plugin": "^8.55.0",
     "@typescript-eslint/parser": "^8.55.0",
     "eslint": "^9.39.2",
+    "globals": "^17.3.0",
+    "jiti": "^2.6.1",
     "nodemon": "^3.1.11",
     "prisma": "5.21.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0"
   }
 }
