--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "davaisuda": "react-native run-android"
   },
   "dependencies": {
     "@react-native-google-signin/google-signin": "^16.1.1",
