--- a/server/package.json
+++ b/server/package.json
@@ -24,22 +24,17 @@
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/node-cron": "^3.0.11",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.55.0",
-    "eslint": "^9.39.2",
     "globals": "^17.3.0",
     "jiti": "^2.6.1",
     "nodemon": "^3.1.11",
     "prisma": "5.21.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.55.0"
+    "typescript": "^5.9.3"
   }
 }
