--- a/server/DockerFile
+++ b/server/DockerFile
@@ -1,15 +1,16 @@
 # Этап 1: Сборка
-FROM node:20-alpine AS builder
+FROM node:22-alpine AS builder
 RUN apk add --no-cache openssl
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npx prisma generate
+RUN npx prisma migrate deploy
 RUN npm run build
 
 # Этап 2: Запуск
-FROM node:20-alpine
+FROM node:22-alpine
 RUN apk add --no-cache openssl
 WORKDIR /app
 COPY --from=builder /app/node_modules ./node_modules
