--- a/server/DockerFile
+++ b/server/DockerFile
@@ -19,4 +19,4 @@ COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/prisma ./prisma
 
 EXPOSE 4000
-CMD ["npm", "start"]
+ENTRYPOINT [ "/bin/sh", "-c", "npx prisma migrate deploy && node dist/index.js" ]
