--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,5 +79,6 @@ jobs:
   
           script: |
             cd ~/simtrader # Путь к папке с docker-compose.yml на сервере
+            sudo docker compose down
             git pull
             sudo docker compose up -d --build
