--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
   
           script: |
-            cd ~/simtrader # Путь к папке с docker-compose.yml на сервере
+            cd ~/SimTrader # Путь к папке с docker-compose.yml на сервере
             sudo docker compose down
             git pull
             sudo docker compose up -d --build
