--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start:prod": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
