--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM node:22
 WORKDIR /app
 
 COPY package.json package-lock.json ./
+COPY prisma ./prisma/
 
 RUN npm install
 RUN npx prisma generate
